lib/tests/fixtures/compiler/parser/next_in_relationship.baseline
Error: next_in_relationship.pp:2:28: next statement cannot be used inside a relationship expression.
  File[foo] -> if true { next }
                         ^~~~
