lib/tests/fixtures/compiler/parser/next_in_relationship.pp
[].each |$x| {
    File[foo] -> if true { next }
}
